[package]
name = "wginit"
description = "Framework for initializing wgpu + winit"
repository = "https://github.com/teenygame/wginit"
version = "0.1.0"
edition = "2021"
license = "LGPL-3.0-or-later"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
winit = "0.30"
log = "0.4"
futures = "0.3.30"
wgpu = { version = "22.1.0", features = ["webgl"] }

[target.'cfg(target_arch = "wasm32")'.dependencies]
console_error_panic_hook = "0.1.6"
wasm-bindgen-futures = "0.4.43"
wasm-logger = "0.2.0"
web-sys = { version = "0.3", features = [
    "Document",
    "Window",
    "Element",
    "HtmlCanvasElement",
] }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
env_logger = "0.11"
pollster = "0.4.0"

[target.'cfg(target_arch = "wasm32")'.dev-dependencies]
wasm-bindgen-test = "0.3.34"

[package.metadata.docs.rs]
targets = [
    "x86_64-pc-windows-msvc",
    "i686-pc-windows-msvc",
    "x86_64-unknown-linux-gnu",
    "wasm32-unknown-unknown",
]
