[package]
name = "wginit"
description = "Framework for initializing wgpu + winit"
repository = "https://github.com/teenygame/wginit"
version = "0.3.0"
edition = "2021"
license = "LGPL-3.0-or-later"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
winit = "0.30"
wgpu = { version = "22.1.0", features = ["webgl"] }

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen-futures = "0.4.43"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
pollster = "0.4.0"

[package.metadata.docs.rs]
targets = [
    "x86_64-pc-windows-msvc",
    "i686-pc-windows-msvc",
    "x86_64-unknown-linux-gnu",
    "wasm32-unknown-unknown",
]
